# bk-lite

./: .gitignore  AGENTS.md  Readme.md
algorithms/classify_text_classification_server/: .copier-answers.yml  Makefile  pyproject.toml
algorithms/classify_text_classification_server/classify_text_classification_server/cli/: bootstrap.py
algorithms/classify_text_classification_server/classify_text_classification_server/serving/: service.py
algorithms/classify_text_classification_server/classify_text_classification_server/serving/config/: model_config.py
algorithms/classify_text_classification_server/classify_text_classification_server/serving/models/: dummy_model.py  loader.py
algorithms/classify_text_classification_server/classify_text_classification_server/serving/schemas/: __init__.py  api_schema.py
algorithms/classify_text_classification_server/classify_text_classification_server/training/: data_loader.py  mlflow_utils.py  trainer.py
algorithms/classify_text_classification_server/classify_text_classification_server/training/config/: loader.py  schema.py
algorithms/classify_text_classification_server/classify_text_classification_server/training/models/: __init__.py  base.py  xgboost_model.py  xgboost_wrapper.py
algorithms/classify_text_classification_server/classify_text_classification_server/training/preprocessing/: __init__.py  feature_engineering.py  text_preprocessor.py
algorithms/classify_text_classification_server/support-files/scripts/: train-model.sh
support-files/lang-syncer/: .gitignore  Makefile  README.md  lang-syncer.py  pyproject.toml
support-files/lang-syncer/src/lang_syncer/: __init__.py  base_syncer.py  cli.py  config.py  exceptions.py  notion_helper.py  server_syncer.py  utils.py  web_syncer.py
(+1648 files in other folders)
