[project]
name = "lang-syncer"
version = "0.1.0"
description = "语言包同步工具 - 提供语言包与 Notion 数据库之间的双向同步功能"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "notion-client>=2.7.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[project.scripts]
lang-syncer = "lang_syncer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lang_syncer"]
